move final presentation date

--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -26,7 +26,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 <td>to be continued...</td><td></td><td></td>
 </tr>
 <tr>
-<td>Final Poster Presentations</td><td>Feb 6, 10.00</td><td>room 0.011 or CS Foyer</td>
+<td>Final Poster Presentations</td><td>outside the lecture period</td><td></td>
 </tr>
 </table>
 
