--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -14,7 +14,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 
 <table>
 <tr>
-<td>First Meeting</td><td>Oct 10, 10.00</td><td>to be announced</td>
+<td>First Meeting</td><td>Oct 10, 10.00</td><td>room U.027</td>
 </tr>
 <tr>
 <td>Paper Discussion</td><td>Oct 17, 10.00</td><td>remote</td>
