update date info

--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -10,7 +10,7 @@ In the final session of the course, all project outcomes will be presented in a 
 
 ## Lecture Dates
 
-The lecture will be mixed between virtual and in-person meetings. In-person meetings take place in the computer science building (Friedrich-Hirzebruch-Allee 8) in room 0.011.
+The lecture will be mixed between virtual and in-person meetings. In-person meetings take place in the computer science building (Friedrich-Hirzebruch-Allee 8).
 
 <table>
 <tr>
@@ -23,7 +23,10 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 <td>Paper Discussion</td><td>Oct 24, 10.00</td><td>remote</td>
 </tr>
 <tr>
-<td>to be continued...</td><td></td><td></td>
+<td>individual project group meetings</td><td></td><td></td>
+</tr>
+<tr>
+<td>mid-term presentations</td><td>Dec 19, 10.00 (tentatively)</td><td></td>
 </tr>
 <tr>
 <td>Final Poster Presentations</td><td>outside the lecture period</td><td></td>
