add paper links

--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -17,19 +17,19 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 <td>First Meeting</td><td>Oct 10, 10.00</td><td>room U.027</td>
 </tr>
 <tr>
-<td>Paper Discussion</td><td>Oct 17, 10.00</td><td>remote</td>
+<td>Paper Discussion</td><td>Oct 17, 10.15</td><td>remote</td>
 </tr>
 <tr>
-<td>Paper Discussion</td><td>Oct 24, 10.00</td><td>remote</td>
+<td>Paper Discussion</td><td>Oct 24, 10.15</td><td>remote</td>
 </tr>
 <tr>
 <td>individual project group meetings</td><td></td><td></td>
 </tr>
 <tr>
-<td>mid-term presentations</td><td>Dec 19, 10.00 (tentatively)</td><td></td>
+<td>mid-term presentations</td><td>Dec 19, 10.15</td><td></td>
 </tr>
 <tr>
-<td>Final Poster Presentations</td><td>outside the lecture period</td><td></td>
+<td>Final Poster Presentations</td><td>Mar 13</td><td></td>
 </tr>
 </table>
 
@@ -38,11 +38,11 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 
 Students can either choose from proposed projects in the first lecture or may propose their own projects if they fit into the course context.
 
-As an example for course projects, some of the potential projects are:
+As an example for course projects, the available projects are:
 
-- building-scale scene graph creation from rgbd
-- detection and affordance prediction of functional elements
-- stereo depth completion for meta aria glasses
+- building-scale scene graph creation and language queries from rgbd ([paper to present](https://www.roboticsproceedings.org/rss20/p077.pdf))
+- detection and affordance prediction of functional elements ([paper to present](https://openaccess.thecvf.com/content/CVPR2024/html/Delitzas_SceneFun3D_Fine-Grained_Functionality_and_Affordance_Understanding_in_3D_Scenes_CVPR_2024_paper.html))
+- stereo depth completion for meta aria glasses ([paper to present](https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123580120.pdf))
 
 ## Questions
 
