add sciebo folder

--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -44,6 +44,10 @@ As an example for course projects, the available projects are:
 - detection and affordance prediction of functional elements ([paper to present](https://openaccess.thecvf.com/content/CVPR2024/html/Delitzas_SceneFun3D_Fine-Grained_Functionality_and_Affordance_Understanding_in_3D_Scenes_CVPR_2024_paper.html))
 - stereo depth completion for meta aria glasses ([paper to present](https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123580120.pdf))
 
+## Course Material
+
+The slides from the initial lecture and any other additional course material are available [in this sciebo folder](https://uni-bonn.sciebo.de/s/DvFc1ZIYe1v2rMG).
+
 ## Questions
 
 For any questions regarding this course, please contact [blumh@uni-bonn.de](mailto:blumh@uni-bonn.de).
