--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -42,7 +42,10 @@ As an example for course projects, the available projects are:
 
 - building-scale scene graph creation and language queries from rgbd ([paper to present](https://www.roboticsproceedings.org/rss20/p077.pdf))
 - detection and affordance prediction of functional elements ([paper to present](https://openaccess.thecvf.com/content/CVPR2024/html/Delitzas_SceneFun3D_Fine-Grained_Functionality_and_Affordance_Understanding_in_3D_Scenes_CVPR_2024_paper.html))
-- stereo depth completion for meta aria glasses ([paper to present](https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123580120.pdf))
+
+the following projects are alread assigned/taken:
+
+- Shashank Dammalapati & Faris Hajdarpasic: stereo depth completion for meta aria glasses ([paper to present](https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123580120.pdf))
 
 ## Course Material
 
