--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -17,13 +17,13 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 <td>First Meeting</td><td>Oct 10, 10.00</td><td>room U.027</td>
 </tr>
 <tr>
-<td>Paper Discussion: Depth Completion</td><td>Oct 17, 10.15 - 11.45</td><td>remote</td>
+<td>Paper Discussion: Depth Completion</td><td>Oct 17, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
 </tr>
 <tr>
-<td>Paper Discussion: Scene Graphs + Language</td><td>Oct 24, 10.15 - 11.45</td><td>remote</td>
+<td>Paper Discussion: Scene Graphs + Language</td><td>Oct 24, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
 </tr>
 <tr>
-<td>Paper Discussion: Functional Elements</td><td>Oct 31, 10.15 - 11.45</td><td>remote</td>
+<td>Paper Discussion: Functional Elements</td><td>Oct 31, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
 </tr>
 <tr>
 <td>individual project group meetings</td><td></td><td></td>
@@ -43,7 +43,7 @@ Students can either choose from proposed projects in the first lecture or may pr
 
 As an example for course projects, the available projects are:
 
-- 
+-
 
 the following projects are alread assigned/taken:
 
