--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -1,9 +1,9 @@
 ---
 title: Lab - Perception and Learning for Robotics
 lecture: plr
-summary: "MSc course with short research projects solving robot perception problems with deep learning"
+summary: MSc course with short research projects solving robot perception
+  problems with deep learning
 ---
-
 In this course, you will work on small research projects in teams of 2. As course introduction, we will discuss the most relevant papers together in the group.
 
 In the final session of the course, all project outcomes will be presented in a poster session.
@@ -20,7 +20,10 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 <td>Paper Discussion: Depth Completion</td><td>Oct 17, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
 </tr>
 <tr>
-<td>Paper Discussion: Scene Graphs + Language<br>Afterwards: Functional Elements</td><td>Oct 24, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
+<td>Paper Discussion: Scene Graphs + Language</td><td>Oct 24, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
+</tr>
+<tr>
+<td>Paper Discussion: Functional Elements</td><td>Oct 31, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
 </tr>
 <tr>
 <td>individual project group meetings</td><td></td><td></td>
