Update src/content/lectures/perception-and-learning-for-robotics/2024.md (via Pages CMS)

--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -12,30 +12,15 @@ In the final session of the course, all project outcomes will be presented in a 
 
 The lecture will be mixed between virtual and in-person meetings. In-person meetings take place in the computer science building (Friedrich-Hirzebruch-Allee 8).
 
-<table>
-<tr>
-<td>First Meeting</td><td>Oct 10, 10.00</td><td>room U.027</td>
-</tr>
-<tr>
-<td>Paper Discussion: Depth Completion</td><td>Oct 17, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
-</tr>
-<tr>
-<td>Paper Discussion: Scene Graphs + Language</td><td>Oct 24, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
-</tr>
-<tr>
-<td>Paper Discussion: Functional Elements</td><td>Oct 31, 10.15 - 11.45</td><td><a href="https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1" target="_blank">remote</a></td>
-</tr>
-<tr>
-<td>individual project group meetings</td><td></td><td></td>
-</tr>
-<tr>
-<td>mid-term presentations</td><td>Dec 19, 10.15</td><td></td>
-</tr>
-<tr>
-<td>Final Poster Presentations</td><td>Mar 13</td><td></td>
-</tr>
-</table>
-
+|     |     |     |
+| --- | --- | --- |
+| First Meeting | Oct 10, 10.00 | room U.027 |
+| Paper Discussion: Depth Completion | Oct 17, 10.15 - 11.45 | [remote](https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1) |
+| Paper Discussion: Scene Graphs + Language | Oct 24, 10.15 - 11.45 | [remote](https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1) |
+| Paper Discussion: Functional Elements | Oct 31, 10.15 - 11.45 | [remote](https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1) |
+| individual project group meetings |     |     |
+| mid-term presentations | Dec 19, 9.15 - 10.45 |     |
+| Final Poster Presentations | Mar 13 |     |
 
 ## Possible Projects
 
@@ -43,13 +28,14 @@ Students can either choose from proposed projects in the first lecture or may pr
 
 As an example for course projects, the available projects are:
 
--
-
 the following projects are alread assigned/taken:
 
-- Shashank Dammalapati & Faris Hajdarpasic: stereo depth completion for meta aria glasses ([paper to present](https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123580120.pdf))
-- Linus Mallwitz & Felix Ghöde: building-scale scene graph creation and language queries from rgbd ([paper to present](https://www.roboticsproceedings.org/rss20/p077.pdf))
-- Mansi Pandit: detection and affordance prediction of functional elements ([paper to present](https://openaccess.thecvf.com/content/CVPR2024/html/Delitzas_SceneFun3D_Fine-Grained_Functionality_and_Affordance_Understanding_in_3D_Scenes_CVPR_2024_paper.html))
+*   Shashank Dammalapati & Faris Hajdarpasic: stereo depth completion for meta aria glasses ([paper to present](https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123580120.pdf))
+    
+*   Linus Mallwitz & Felix Ghöde: building-scale scene graph creation and language queries from rgbd ([paper to present](https://www.roboticsproceedings.org/rss20/p077.pdf))
+    
+*   Mansi Pandit: detection and affordance prediction of functional elements ([paper to present](https://openaccess.thecvf.com/content/CVPR2024/html/Delitzas_SceneFun3D_Fine-Grained_Functionality_and_Affordance_Understanding_in_3D_Scenes_CVPR_2024_paper.html))
+    
 
 ## Course Material
 
@@ -58,4 +44,3 @@ The slides from the initial lecture and any other additional course material are
 ## Questions
 
 For any questions regarding this course, please contact [blumh@uni-bonn.de](mailto:blumh@uni-bonn.de).
-
