Update src/content/lectures/perception-and-learning-for-robotics/2024.md (via Pages CMS)

--- a/src/content/lectures/perception-and-learning-for-robotics/2024.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2024.md
@@ -19,7 +19,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 | Paper Discussion: Scene Graphs + Language | Oct 24, 10.15 - 11.45 | [remote](https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1) |
 | Paper Discussion: Functional Elements | Oct 31, 10.15 - 11.45 | [remote](https://uni-bonn.zoom-x.de/j/64985805214?pwd=L9HAoxVcKLBd0gC7lzJGehjGKjjvgQ.1) |
 | individual project group meetings |     |     |
-| mid-term presentations | Dec 19, 9.15 - 10.45 |     |
+| mid-term presentations | Dec 19, 9.15 - 10.45 | room 0.042 |
 | Final Poster Presentations | Mar 13 |     |
 
 ## Possible Projects
