Update src/content/lectures/perception-and-learning-for-robotics/2025.md (via Pages CMS)

--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -15,7 +15,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 |     |     |     |
 | --- | --- | --- |
 | First Meeting | Apr 8, 10.15 - 11.45 | room 0.011 |
-| Paper Discussion | Apr 15, 10.15 - 11.45 | tbd |
+| Paper Discussion | Apr 15, 10.15 - 11.45 | room 0.011 |
 | Paper Discussion | Apr 22, 10.15 - 11.45 | tbd |
 | individual project group meetings |     |     |
 | mid-term presentations | Jun 3, 10.15 - 11.45 | room 0.011 |
@@ -34,7 +34,7 @@ As an example for course projects, projects in the last course were:
 
 ## Course Material
 
-<!-- The slides from the initial lecture and any other additional course material are available [in this sciebo folder](https://uni-bonn.sciebo.de/s/DvFc1ZIYe1v2rMG). -->
+The slides from the initial lecture and any other additional course material are available [in this sciebo folder](https://uni-bonn.sciebo.de/s/eg2iUXFIaTc0aoB).
 
 ## Questions
 
