Update src/content/lectures/perception-and-learning-for-robotics/2025.md (via Pages CMS)

--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -18,7 +18,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 | Paper Discussion | Apr 15, 10.15 - 11.45 | room 0.011 |
 | Paper Discussion | Apr 22, 10.15 - 11.45 | tbd |
 | individual project group meetings |     |     |
-| mid-term presentations | Jun 3, 10.15 - 11.45 | room 0.011 |
+| mid-term presentations | Jun 3, 10.15 - 11.45 | tbd |
 | Final Poster Presentations | Aug 26 | room 0.011 |
 
 ## Possible Projects
