--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -15,15 +15,22 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 |     |     |     |
 | --- | --- | --- |
 | First Meeting | Apr 8, 10.15 - 11.45 | room 0.011 |
-| Paper Discussion | Apr 15, 10.15 - 11.45 | room 0.011 |
-| Paper Discussion | Apr 22, 10.15 - 11.45 | tbd |
+| Paper Discussion: SpatialBot | Apr 15, 10.15 - 11.45 | room 0.011 |
+| Paper Discussion: Open-Set Recognition in the Age of Vision-Language Models | Apr 15, 10.15 - 11.45 | room 0.011 |
+| Paper Discussion: Understanding Human Hands in Contact at Internet Scale | Apr 22, 10.15 - 11.45 | [zoom link](https://uni-bonn.zoom-x.de/j/66737773383?pwd=1gHL1QlJLhDzNe156rtMGdhei1YLmC.1) |
 | individual project group meetings |     |     |
-| mid-term presentations | Jun 3, 10.15 - 11.45 | tbd |
+| mid-term presentations | May 27, 10.15 - 11.45 | tbd |
 | Final Poster Presentations | Aug 26 | room 0.011 |
 
 ## Possible Projects
 
 Students can either choose from proposed projects in the first lecture or may propose their own projects if they fit into the course context.
+
+This year, the following projects are already assigned:
+
+*   VLMs with Depth
+*   Open-Vocabulary Anomaly Segmentation
+*   Exocentric Hand Tracking
 
 As an example for course projects, projects in the last course were:
 
