Update src/content/lectures/perception-and-learning-for-robotics/2025.md (via Pages CMS)

--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -43,6 +43,12 @@ As an example for course projects, projects in the last course were:
 
 The slides from the initial lecture and any other additional course material are available [in this sciebo folder](https://uni-bonn.sciebo.de/s/eg2iUXFIaTc0aoB).
 
+## Workstations
+
+For this course we provide two Linux workstations in room 0.039. You can go to this lab room and use the workstations locally, or you can login with your CS account at `ssh <cs account>@rpllab1.rpl.uni-bonn.de` and `ssh <cs account>@rpllab5.rpl.uni-bonn.de`.
+
+These workstations are shared. You can use them as access terminals, to debug code, download datasets, visualize data, etc. Please make sure to not interfer with each other's data and workspaces and don't change the system libraries. All heavy compute should be done on the cluster.
+
 ## Questions
 
 For any questions regarding this course, please contact [blumh@uni-bonn.de](mailto:blumh@uni-bonn.de).
