--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -19,7 +19,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 | Paper Discussion: Open-Set Recognition in the Age of Vision-Language Models | Apr 15, 10.15 - 11.45 | room 0.011 |
 | Paper Discussion: Understanding Human Hands in Contact at Internet Scale | Apr 22, 10.15 - 11.45 | [zoom link](https://uni-bonn.zoom-x.de/j/66737773383?pwd=1gHL1QlJLhDzNe156rtMGdhei1YLmC.1) |
 | individual project group meetings |     |     |
-| mid-term presentations | May 27, 10.15 - 11.45 | tbd |
+| mid-term presentations | May 27, 10.15 - 11.45 | 0.041 |
 | Final Poster Presentations | Aug 26 | room 0.011 |
 
 ## Possible Projects
