Update src/content/lectures/perception-and-learning-for-robotics/2025.md (via Pages CMS)

--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -14,29 +14,19 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 
 |     |     |     |
 | --- | --- | --- |
-| First Meeting | Apr 8, 10.15 - 11.45 | room 0.011 |
-| Paper Discussion: SpatialBot | Apr 15, 10.15 - 11.45 | room 0.011 |
-| Paper Discussion: Open-Set Recognition in the Age of Vision-Language Models | Apr 15, 10.15 - 11.45 | room 0.011 |
-| Paper Discussion: Understanding Human Hands in Contact at Internet Scale | Apr 22, 10.15 - 11.45 | [zoom link](https://uni-bonn.zoom-x.de/j/66737773383?pwd=1gHL1QlJLhDzNe156rtMGdhei1YLmC.1) |
-| individual project group meetings |     |     |
-| mid-term presentations | May 27, 10.15 - 11.45 | 0.041 |
-| Final Poster Presentations | Aug 26 | room 0.011 |
+| First Meeting | Oct 14, 10.15 - 11.45 | room 0.011 |
+| Paper Discussions | Oct 21, 13.15 - 14.45 | room 0.011 |
+| Final Poster Presentations | Feb 03 | room 0.011 |
 
 ## Possible Projects
 
 Students can either choose from proposed projects in the first lecture or may propose their own projects if they fit into the course context.
 
-This year, the following projects are already assigned:
+As an example for course projects, projects in the last course were:
 
 *   VLMs with Depth
 *   Open-Vocabulary Anomaly Segmentation
 *   Exocentric Hand Tracking
-
-As an example for course projects, projects in the last course were:
-
-*   stereo depth completion for meta aria glasses
-*   building-scale scene graph creation and language queries from rgbd
-*   detection and affordance prediction of functional elements
 
 
 ## Course Material
