Update src/content/lectures/perception-and-learning-for-robotics/2025.md (via Pages CMS)

--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -14,9 +14,9 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 
 |     |     |     |
 | --- | --- | --- |
-| First Meeting | Oct 14, 10.15 - 11.45 | room 0.011 |
-| Paper Discussions | Oct 21, 13.15 - 14.45 | room 0.011 |
-| Final Poster Presentations | Feb 03 | room 0.011 |
+| First Meeting | Oct 14, 10.15 - 11.45 | room 0.042 |
+| Paper Discussions | Oct 21, 13.15 - 14.45 | room 0.042 |
+| Final Poster Presentations | Feb 03 | tbd |
 
 ## Possible Projects
 
