--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -16,6 +16,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 | --- | --- | --- |
 | First Meeting | Oct 14, 10.15 - 11.45 | room 0.042 |
 | Paper Discussions | Oct 21, 13.15 - 14.45 | room 0.042 |
+| Mid-Term Presentations | Dec 16, 10.15 - 11.45 | room 0.042 |
 | Final Poster Presentations | Feb 03 | tbd |
 
 ## Possible Projects
@@ -31,7 +32,7 @@ As an example for course projects, projects in the last course were:
 
 ## Course Material
 
-The slides from the initial lecture and any other additional course material are available [in this sciebo folder](https://uni-bonn.sciebo.de/s/eg2iUXFIaTc0aoB).
+The slides from the initial lecture and any other additional course material are available [in this sciebo folder](https://uni-bonn.sciebo.de/s/mXXrwHELPRFETqW).
 
 ## Workstations
 
