Update schedule and details for 2026 SSL course

--- a/src/content/lectures/self-supervised-learning/2026.md
+++ b/src/content/lectures/self-supervised-learning/2026.md
@@ -11,12 +11,50 @@ This course requires a good understanding of deep learning and machine learning.
 
 ## Schedule
 
-|     |     |
-| --- | --- |
-| Tutorials | Monday (Time: TBD) |
-| Lectures | Friday (Time: TBD) |
-| Exam | Date and Time: TBD |
-| Lecture Content | TBD |
+**Lecture period:** April 7 – July 18, 2026  
+**Tutorials:** Mondays, 16:00–18:00  
+**Lectures:** Fridays, 14:00–16:00  
+**Exams:** TBD
+
+### Lectures 
+
+|  | Date | Time | Topic |
+| --- | --- | --- | --- |
+| Lecture 1 | April 10, 2026 | 14:00–16:00 | TBD |
+| Lecture 2 | April 17, 2026 | 14:00–16:00 | TBD |
+| Lecture 3 | April 24, 2026 | 14:00–16:00 | TBD |
+| – | May 1, 2026 | – | Public Holiday (No lecture)  |
+| Lecture 4 | May 8, 2026 | 14:00–16:00 | TBD |
+| Lecture 5 | May 15, 2026 | 14:00–16:00 | TBD |
+| Lecture 6 | May 22, 2026 | 14:00–16:00 | TBD |
+| – | May 29, 2026 | – | Public Holiday (No lecture)  |
+| Lecture 7 | June 5, 2026 | 14:00–16:00 | TBD |
+| Lecture 8 | June 12, 2026 | 14:00–16:00 | TBD |
+| Lecture 9 | June 19, 2026 | 14:00–16:00 | TBD |
+| Lecture 10 | June 26, 2026 | 14:00–16:00 | TBD |
+| Lecture 11 | July 3, 2026 | 14:00–16:00 | TBD |
+| Lecture 12 | July 10, 2026 | 14:00–16:00 | TBD |
+| Lecture 13 | July 17, 2026 | 14:00–16:00 | TBD |
+
+### Tutorials 
+
+|  | Date | Time | Topic |
+| --- | --- | --- | --- |
+| Tutorial 1 | April 13, 2026 | 16:00–18:00 | TBD |
+| Tutorial 2 | April 20, 2026 | 16:00–18:00 | TBD |
+| Tutorial 3 | April 27, 2026 | 16:00–18:00 | TBD |
+| Tutorial 4 | May 4, 2026 | 16:00–18:00 | TBD |
+| Tutorial 5 | May 11, 2026 | 16:00–18:00 | TBD |
+| Tutorial 6 | May 18, 2026 | 16:00–18:00 | TBD |
+| Tutorial 7 | May 25, 2026 | 16:00–18:00 | TBD |
+| Tutorial 8 | June 1, 2026 | 16:00–18:00 | TBD |
+| Tutorial 9 | June 8, 2026 | 16:00–18:00 | TBD |
+| Tutorial 10 | June 15, 2026 | 16:00–18:00 | TBD |
+| Tutorial 11 | June 22, 2026 | 16:00–18:00 | TBD |
+| Tutorial 12 | June 29, 2026 | 16:00–18:00 | TBD |
+| Tutorial 13 | July 6, 2026 | 16:00–18:00 | TBD |
+| Tutorial 14 | July 13, 2026 | 16:00–18:00 | TBD |
+
 
 ## Course Material
 
