--- a/src/content/lectures/self-supervised-learning/2026.md
+++ b/src/content/lectures/self-supervised-learning/2026.md
@@ -1,7 +1,7 @@
 ---
 title: Self Supervised Learning
 lecture: ssl
-summary: Advanced MSc course on Self Supervised Learning for Summer 2026
+summary: Advanced MSc course on Self Supervised Learning Summer Semester 2026
 ---
 This is an advanced MSc course on Self Supervised Learning for Summer 2026, designed for 2nd and 3rd semester students.
 
@@ -11,50 +11,50 @@ This course requires a good understanding of deep learning and machine learning.
 
 ## Schedule
 
-**Lecture period:** April 7 – July 18, 2026  
 **Tutorials:** Mondays, 16:00–18:00  
 **Lectures:** Fridays, 14:00–16:00  
+**Room:** TBD
 **Exams:** TBD
 
 ### Lectures 
 
 |  | Date | Time | Topic |
 | --- | --- | --- | --- |
-| Lecture 1 | April 10, 2026 | 14:00–16:00 | TBD |
-| Lecture 2 | April 17, 2026 | 14:00–16:00 | TBD |
-| Lecture 3 | April 24, 2026 | 14:00–16:00 | TBD |
+| Lecture 1 | April 17, 2026 | 14:00–16:00 | TBD |
+| Lecture 2 | April 24, 2026 | 14:00–16:00 | TBD |
 | – | May 1, 2026 | – | Public Holiday (No lecture)  |
-| Lecture 4 | May 8, 2026 | 14:00–16:00 | TBD |
-| Lecture 5 | May 15, 2026 | 14:00–16:00 | TBD |
-| Lecture 6 | May 22, 2026 | 14:00–16:00 | TBD |
+| Lecture 3 | May 8, 2026 | 14:00–16:00 | TBD |
+| Lecture 4 | May 15, 2026 | 14:00–16:00 | TBD |
+| Lecture 5 | May 22, 2026 | 14:00–16:00 | TBD |
 | – | May 29, 2026 | – | Public Holiday (No lecture)  |
-| Lecture 7 | June 5, 2026 | 14:00–16:00 | TBD |
-| Lecture 8 | June 12, 2026 | 14:00–16:00 | TBD |
-| Lecture 9 | June 19, 2026 | 14:00–16:00 | TBD |
-| Lecture 10 | June 26, 2026 | 14:00–16:00 | TBD |
-| Lecture 11 | July 3, 2026 | 14:00–16:00 | TBD |
-| Lecture 12 | July 10, 2026 | 14:00–16:00 | TBD |
-| Lecture 13 | July 17, 2026 | 14:00–16:00 | TBD |
+| Lecture 6 | June 5, 2026 | 14:00–16:00 | TBD |
+| Lecture 7 | June 12, 2026 | 14:00–16:00 | TBD |
+| Lecture 8 | June 19, 2026 | 14:00–16:00 | TBD |
+| Lecture 9 | June 26, 2026 | 14:00–16:00 | TBD |
+| Lecture 10 | July 3, 2026 | 14:00–16:00 | TBD |
+| Lecture 11 | July 10, 2026 | 14:00–16:00 | TBD |
+| Lecture 12 | July 17, 2026 | 14:00–16:00 | TBD |
+| Lecture 13 | July 24, 2026 | 14:00–16:00 | TBD |
+
 
 ### Tutorials 
 
 |  | Date | Time | Topic |
 | --- | --- | --- | --- |
-| Tutorial 1 | April 13, 2026 | 16:00–18:00 | TBD |
-| Tutorial 2 | April 20, 2026 | 16:00–18:00 | TBD |
-| Tutorial 3 | April 27, 2026 | 16:00–18:00 | TBD |
-| Tutorial 4 | May 4, 2026 | 16:00–18:00 | TBD |
-| Tutorial 5 | May 11, 2026 | 16:00–18:00 | TBD |
-| Tutorial 6 | May 18, 2026 | 16:00–18:00 | TBD |
-| Tutorial 7 | May 25, 2026 | 16:00–18:00 | TBD |
-| Tutorial 8 | June 1, 2026 | 16:00–18:00 | TBD |
-| Tutorial 9 | June 8, 2026 | 16:00–18:00 | TBD |
-| Tutorial 10 | June 15, 2026 | 16:00–18:00 | TBD |
-| Tutorial 11 | June 22, 2026 | 16:00–18:00 | TBD |
-| Tutorial 12 | June 29, 2026 | 16:00–18:00 | TBD |
-| Tutorial 13 | July 6, 2026 | 16:00–18:00 | TBD |
-| Tutorial 14 | July 13, 2026 | 16:00–18:00 | TBD |
-
+| Tutorial 1 | April 20, 2026 | 16:00–18:00 | TBD |
+| Tutorial 2 | April 27, 2026 | 16:00–18:00 | TBD |
+| Tutorial 3 | May 4, 2026 | 16:00–18:00 | TBD |
+| Tutorial 4 | May 11, 2026 | 16:00–18:00 | TBD |
+| Tutorial 5 | May 18, 2026 | 16:00–18:00 | TBD |
+| Tutorial 6 | May 25, 2026 | 16:00–18:00 | TBD |
+| Tutorial 7 | June 1, 2026 | 16:00–18:00 | TBD |
+| Tutorial 8 | June 8, 2026 | 16:00–18:00 | TBD |
+| Tutorial 9 | June 15, 2026 | 16:00–18:00 | TBD |
+| Tutorial 10 | June 22, 2026 | 16:00–18:00 | TBD |
+| Tutorial 11 | June 29, 2026 | 16:00–18:00 | TBD |
+| Tutorial 12 | July 6, 2026 | 16:00–18:00 | TBD |
+| Tutorial 13 | July 13, 2026 | 16:00–18:00 | TBD |
+| Tutorial 14 | July 20, 2026 | 16:00–18:00 | TBD |
 
 ## Course Material
 
