Update src/content/lectures/self-supervised-learning/2026.md (via Pages CMS)

--- a/src/content/lectures/self-supervised-learning/2026.md
+++ b/src/content/lectures/self-supervised-learning/2026.md
@@ -20,13 +20,13 @@ This course requires a good understanding of deep learning and machine learning.
 | Tutorial 1 | April 20, 2026 | 16:00–18:00 | TBD |
 | Lecture 2 | April 24, 2026 | 14:00–16:00 | TBD |
 | Tutorial 2 | April 27, 2026 | 16:00–18:00 | TBD |
-| – | May 1, 2026 | – | Public Holiday (No lecture)  |
+| – | May 1, 2026 | – | Public Holiday |
 | Lecture 3 | May 8, 2026 | 14:00–16:00 | TBD |
 | Tutorial 3 | May 11, 2026 | 16:00–18:00 | TBD |
 | Lecture 4 | May 15, 2026 | 14:00–16:00 | TBD |
 | Tutorial 4 | May 18, 2026 | 16:00–18:00 | TBD |
 | Lecture 5 | May 22, 2026 | 14:00–16:00 | TBD |
-| – | May 29, 2026 | – | Public Holiday (No lecture)  |
+| – | May 29, 2026 | – | Pfingstferien  |
 | Tutorial 5 | June 1, 2026 | 16:00–18:00 | TBD |
 | - | June 5, 2026 | - | No Lecture |
 | Lecture 6 | June 12, 2026 | 14:00–16:00 | TBD |
