--- a/src/content/lectures/perception-and-learning-for-robotics/2025.md
+++ b/src/content/lectures/perception-and-learning-for-robotics/2025.md
@@ -17,7 +17,7 @@ The lecture will be mixed between virtual and in-person meetings. In-person meet
 | First Meeting | Oct 14, 10.15 - 11.45 | room 0.042 |
 | Paper Discussions | Oct 21, 13.15 - 14.45 | room 0.042 |
 | Mid-Term Presentations | Dec 16, 10.15 - 11.45 | room 0.042 |
-| Final Poster Presentations | Feb 03 | tbd |
+| Final Poster Presentations | Feb 03 | 14.15 - 15.45 | room 0.016 |
 
 ## Possible Projects
 
